--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
----
-layout: page
-title: Home
----
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  </head>
+  <body>
+    <p>
+      Hello World!!
+    </p>
+  </body>
+</html>
