--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Kazukitash Works</title>
+    <title>kazukitash works</title>
   </head>
-  <body>
-    <p>
+  <body">
+    <p style="width: 100%; text-align: center; margin-top: 3rem;">
       Hello World!!
     </p>
-    <iframe src="https://calendar.google.com/calendar/embed?src=7sd6fopjci179cd7iuobrkoeqg%40group.calendar.google.com&ctz=Asia%2FTokyo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
   </body>
 </html>
